Se añade funconalidad de busqueda productos

--- a/index.html
+++ b/index.html
@@ -20,14 +20,19 @@
         </div>
 
         <div class="search-bar">
-          <select class="search-category">
+          <select id="search-category" class="search-category">
             <option>Todas las marcas</option>
             <option>Ropa</option>
             <option>Electrónica</option>
             <option>Libros</option>
           </select>
-          <input type="text" placeholder="Buscar..." class="search-input" />
-          <button class="search-button">🔍</button>
+          <input
+            type="text"
+            placeholder="Buscar..."
+            id="search-input"
+            class="search-input"
+          />
+          <button id="search-button" class="search-button">🔍</button>
         </div>
 
         <nav class="header-container--options">
