Solucionado bug donde carrito aparecia en dolares en lugar de euros

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <aside class="carrito">
         <h2>Carrito</h2>
         <ul id="carrito-items"></ul>
-        <p>Total: $<span id="carrito-total">0</span></p>
+        <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
         <button id="vaciar-carrito">Vaciar Carrito</button>
       </aside>
     </main>
