Añadimos estilo al carrito

--- a/index.html
+++ b/index.html
@@ -20,12 +20,7 @@
         </div>
 
         <div class="search-bar">
-          <select id="search-category" class="search-category">
-            <option>Todas las marcas</option>
-            <option>Ropa</option>
-            <option>Electrónica</option>
-            <option>Libros</option>
-          </select>
+          <select id="search-category" class="search-category"></select>
           <input
             type="text"
             placeholder="Buscar..."
@@ -66,7 +61,7 @@
       <section id="product-container" class="product-container"></section>
 
       <aside class="carrito">
-        <h2>Carrito</h2>
+        <h2 class="cart-title">¡Mira lo que llevas!</h2>
         <ul id="carrito-items"></ul>
         <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
         <button id="vaciar-carrito">Vaciar Carrito</button>
