Modificación de estilos del carrito modal

--- a/index.html
+++ b/index.html
@@ -67,18 +67,21 @@
 
     <main class="container__wrapper">
       <section id="product-container" class="product-container"></section>
-      <!--
+
+      <!-- LAN0 - 20250606 - Modificamos el carrito a modal
       <aside class="carrito">
         <h2 class="cart-title">¡Mira lo que llevas!</h2>
         <ul id="carrito-items"></ul>
         <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
         <button id="vaciar-carrito">Vaciar Carrito</button>
       </aside>
--->
+      -->
 
       <div id="modalCarrito" class="modal">
         <div class="modal-content carrito">
+          <div>
           <span class="close">&times;</span>
+          </div>
           <h2 class="cart-title">¡Mira lo que llevas!</h2>
           <ul id="carrito-items"></ul>
           <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
