Limitamos los decimales a 2

--- a/index.html
+++ b/index.html
@@ -1,95 +1,96 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/normalize.css" />
-    <link rel="stylesheet" href="css/styles.css" />
-
+    <link rel="stylesheet" href="css/index.css" />
     <title>Document</title>
   </head>
   <body>
-    <header class="header">
-      <div class="header-container container__wrapper">
-        <div class="header-container--title">
-          <img
-            src="images\logo_agoodshop_recortado_negro.png"
-            alt="agoodShop logo"
-            class="logo-img"
-          />
-        </div>
-
-        <div class="search-bar">
-          <select id="search-category" class="search-category"></select>
-          <input
-            type="text"
-            placeholder="Buscar..."
-            id="search-input"
-            class="search-input"
-          />
-          <button id="search-button" class="search-button">🔍</button>
-        </div>
-
-        <nav class="header-container--options">
-          <ul class="header-container--options__list">
-            <li>
-              <a class="option" href="">
-                <span class="line-small">Hola, identifícate</span><br />
-                <span class="line-bold">Cuenta y listas ▼</span>
-              </a>
-            </li>
-            <li>
-              <a class="option" href="">
-                <span class="line-small">Devoluciones</span><br />
-                <span class="line-bold">y Pedidos</span>
-              </a>
-            </li>
-            <!--
-            <li>
-              <a href="">
-                <span class="line-small">&nbsp;</span>
-                <div class="cart-icon">
-                  🛒<span class="cart-count" id="cart-count">0</span>
-                </div>
-              </a>
-            </li>
-            -->
-            <li>
-              <span class="line-small">&nbsp;</span>
-              <button class="cart-icon" id="abrirCarritoBtn" title="Ver carrito">
-                🛒<span class="cart-count" id="cart-count">0</span>
-              </button>
-            </li>
-          </ul>
-        </nav>
-      </div>
+    <header class="container__wrapper">
+      <div class="header-container--title"></div>
     </header>
 
+    <div class="line-bottom"></div>
+
     <main class="container__wrapper">
-      <section id="product-container" class="product-container"></section>
-
-      <!-- LAN0 - 20250606 - Modificamos el carrito a modal
-      <aside class="carrito">
-        <h2 class="cart-title">¡Mira lo que llevas!</h2>
-        <ul id="carrito-items"></ul>
-        <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
-        <button id="vaciar-carrito">Vaciar Carrito</button>
-      </aside>
-      -->
-
-      <div id="modalCarrito" class="modal">
-        <div class="modal-content carrito">
-          <div>
-          <span class="close">&times;</span>
-          </div>
-          <h2 class="cart-title">¡Mira lo que llevas!</h2>
+      <div class="card__wrapper">
+        <table class="carrito-tabla">
+          <thead>
+            <tr>
+              <th>Producto</th>
+              <th>Cantidad</th>
+              <th>Unidad</th>
+              <th>Total</th>
+            </tr>
+          </thead>
+          <tbody class="tb-products-container"></tbody>
+        </table>
+        <!--
+        <aside class="carrito">
+          <h2 class="cart-title">Total</h2>
           <ul id="carrito-items"></ul>
           <p>Total: <span id="carrito-total">0</span> <strong>€</strong></p>
-          <button id="vaciar-carrito">Vaciar Carrito</button>
-        </div>
+        </aside> -->
+
+        <aside class="carrito">
+          <h2 class="cart-title">Total</h2>
+          <ul id="carrito-items"></ul>
+          <div class="total-general">
+            <span class="total-label">TOTAL</span>
+            <span class="total-importe">
+              <span id="carrito-total">0.00</span>
+              <span class="moneda"></span>
+            </span>
+          </div>
+        </aside>
       </div>
     </main>
 
-    <script src="js/index.js"></script>
+    <div class="line-bottom"></div>
+
+    <footer class="container__wrapper-footer"></footer>
+
+    <!-- LAN0 - 20250612
+         Añadimos el script al final del document para no tener problemas con la interaccion 
+         con js de objetos que todavia no se hayan renderizado -->
+    <script src="scripts/index.js"></script>
+
+    <!-- Inicio de los Templates -->
+    <template id="product-header-template">
+      <tr>
+        <th class="header-product"></th>
+        <th class="header-cantidad"></th>
+        <th class="header-unidad"></th>
+        <th class="header.total"></th>
+      </tr>
+    </template>
+
+    <template id="product-row-template">
+      <tr>
+        <td>
+          <strong class="product-title"></strong><br />
+          <small class="product-sku"></small>
+        </td>
+        <td>
+          <div class="cantidad">
+            <button class="btn-restar">-</button>
+            <input class="inputNumber" type="number" value="0" />
+            <button class="btn-sumar">+</button>
+          </div>
+        </td>
+        <td class="product-price"></td>
+        <td class="product-total"></td>
+      </tr>
+    </template>
+
+    <template id="template-item">
+      <li class="item">
+        <span class="item-title"></span>
+        <span class="item-price"></span>
+      </li>
+    </template>
+    <!-- Final de los Templates -->
   </body>
 </html>
