Extraemos la clase carritoa un fichero aparte

--- a/index.html
+++ b/index.html
@@ -52,11 +52,6 @@
 
     <footer class="container__wrapper-footer"></footer>
 
-    <!-- LAN0 - 20250612
-         Añadimos el script al final del document para no tener problemas con la interaccion 
-         con js de objetos que todavia no se hayan renderizado -->
-    <script src="scripts/index.js"></script>
-
     <!-- Inicio de los Templates -->
     <template id="product-header-template">
       <tr>
@@ -92,5 +87,11 @@
       </li>
     </template>
     <!-- Final de los Templates -->
+
+    <!-- LAN0 - 20250612
+         Añadimos el script al final del document para no tener problemas con la interaccion 
+         con js de objetos que todavia no se hayan renderizado -->
+    <script src="scripts/carrito.js"></script>   
+    <script src="scripts/index.js"></script>    
   </body>
 </html>
