--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -73,11 +73,12 @@
         <span class="item-price"></span>
       </li>
     </template>
-    <!-- Final de los Templates -->
+    <!-- Final de los Templates -->    
 
     <!-- LAN0 - 20250612
          Añadimos el script al final del document para no tener problemas con la interaccion 
          con js de objetos que todavia no se hayan renderizado -->
+    <script src="scripts/item.js"></script>         
     <script src="scripts/carrito.js"></script>
     <script src="scripts/index.js"></script>
   </body>
