--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
          Añadimos el script al final del document para no tener problemas con la interaccion 
          con js de objetos que todavia no se hayan renderizado -->
     <script src="scripts/item.js"></script>         
-    <script src="scripts/carrito.js"></script>
+    <script src="scripts/Carrito.js"></script>
     <script src="scripts/index.js"></script>
   </body>
 </html>
