--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <td>
           <div class="cantidad">
             <button class="btn-restar">-</button>
-            <input class="inputNumber" type="number" value="0" />
+            <input class="inputNumber" name="inputNumber" type="number" value="0" />
             <button class="btn-sumar">+</button>
           </div>
         </td>
@@ -78,7 +78,8 @@
     <!-- LAN0 - 20250612
          Añadimos el script al final del document para no tener problemas con la interaccion 
          con js de objetos que todavia no se hayan renderizado -->
-    <script src="scripts/item.js"></script>         
+    <script src="scripts/InfoItemBean.js"></script>         
+    <script src="scripts/InfoResultBean.js"></script>         
     <script src="scripts/Carrito.js"></script>
     <script src="scripts/index.js"></script>
   </body>
