--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     <!-- Final de los Templates -->    
 
     <!-- LAN0 - 20250612
-         Añadimos el script al final del document para no tener problemas con la interaccion 
-         con js de objetos que todavia no se hayan renderizado -->
+         Añadimos los scripts al final del document para no tener problemas con la interaccion 
+         con js de objetos que todavia no se hayan cargado -->
     <script src="scripts/InfoItemBean.js"></script>         
     <script src="scripts/InfoResultBean.js"></script>         
     <script src="scripts/Carrito.js"></script>
